# celery-once-task

./: .gitignore  README.md  pyproject.toml  renovate.json
.github/workflows/: publish.yml  test.yml
src/celery_once_task/: __init__.py  bootstep.py  config.py  django.py  signals.py  task.py  utils.py
tests/: test_config.py  test_utils.py
